wjw 在生成session的id时,添加了一种使用HttpSession的ID的方式

--- a/web-app/ajax-1.html
+++ b/web-app/ajax-1.html
@@ -42,7 +42,8 @@
 	// Join and subscribe
 	function joinListen() {
 		// Streaming is only supported in Mozilla. E.g. IE does not allow access to responseText on readyState == 3
-		doRequest("/pushlet/pushlet.srv?p_event=join-listen&p_subject=/pushlet/chatx&p_format=xml-strict&p_mode=pull");
+		doRequest("/pushlet/pushlet.srv?p_event=join-listen&p_subject=/pushlet/ping&p_format=xml-strict&p_mode=pull");
+    //doRequest("/pushlet/pushlet.srv?p_event=join-listen&p_subject=/pushlet/chatx&p_format=xml-strict&p_mode=pull");
 	}
 
 	// Do XML HTTP request
