把ajax-1.html中的调试信息中加上每次请求的URL

--- a/web-app/ajax-1.html
+++ b/web-app/ajax-1.html
@@ -48,7 +48,7 @@
 
 	// Do XML HTTP request
     function doRequest(url) {
- 		displayData('creating XMLHttpRequest...');
+ 		displayData('creating XMLHttpRequest,url='+url);
 
  		// Create XMLHttpRequest object and open URL in async mode
 		xmlhttp = new XMLHttpRequest();
