修改EventQueue.Java类,使用redis的List来存储Event

--- a/web-app/ajax-1.html
+++ b/web-app/ajax-1.html
@@ -99,7 +99,8 @@
 
     // Print util
 	function displayData(aString) {
-		document.dataEventDisplay.event.value = document.dataEventDisplay.event.value+"\n"+aString;
+		//document.dataEventDisplay.event.value = document.dataEventDisplay.event.value+"\n"+aString;
+    document.dataEventDisplay.event.value = aString;
 	}
 
 	//-->
