wjw首次添加读解注释

--- a/web-app/ajax-1.html
+++ b/web-app/ajax-1.html
@@ -42,12 +42,13 @@
 	// Join and subscribe
 	function joinListen() {
 		// Streaming is only supported in Mozilla. E.g. IE does not allow access to responseText on readyState == 3
-		doRequest("/pushlet/pushlet.srv?p_event=join-listen&p_subject=/pushlet/chatx&p_format=xml-strict&p_mode=pull");
+    doRequest("/pushlet/pushlet.srv?p_event=join-listen&p_subject=/pushlet/ping&p_format=xml-strict&p_mode=pull");
+    //doRequest("/pushlet/pushlet.srv?p_event=join-listen&p_subject=/pushlet/chatx&p_format=xml-strict&p_mode=pull");
 	}
 
 	// Do XML HTTP request
     function doRequest(url) {
- 		displayData('creating XMLHttpRequest...');
+ 		displayData('creating XMLHttpRequest,url='+url);
 
  		// Create XMLHttpRequest object and open URL in async mode
 		xmlhttp = new XMLHttpRequest();
