--- a/web-app/ajax-1.html
+++ b/web-app/ajax-1.html
@@ -42,8 +42,8 @@
 	// Join and subscribe
 	function joinListen() {
 		// Streaming is only supported in Mozilla. E.g. IE does not allow access to responseText on readyState == 3
-		doRequest("/pushlet/pushlet.srv?p_event=join-listen&p_subject=/pushlet/ping&p_format=xml-strict&p_mode=pull");
-    //doRequest("/pushlet/pushlet.srv?p_event=join-listen&p_subject=/pushlet/chatx&p_format=xml-strict&p_mode=pull");
+		//doRequest("/pushlet/pushlet.srv?p_event=join-listen&p_subject=/pushlet/ping&p_format=xml-strict&p_mode=pull");
+    doRequest("/pushlet/pushlet.srv?p_event=join-listen&p_subject=/pushlet/chatx&p_format=xml-strict&p_mode=pull");
 	}
 
 	// Do XML HTTP request
@@ -99,8 +99,11 @@
 
     // Print util
 	function displayData(aString) {
-		//document.dataEventDisplay.event.value = document.dataEventDisplay.event.value+"\n"+aString;
-    document.dataEventDisplay.event.value = aString;
+		if(document.dataEventDisplay.event.value.length > 8192) {
+			document.dataEventDisplay.event.value = "";
+		}
+		document.dataEventDisplay.event.value = document.dataEventDisplay.event.value+"\n"+aString;
+    //document.dataEventDisplay.event.value = aString;
 	}
 
 	//-->
