ADD: 添加一个协议:publish_to_onine,发送消息给在线用户!

--- a/web-app/IM.html
+++ b/web-app/IM.html
@@ -110,7 +110,7 @@
    }
    //发布上线信息
     function publish() {
-        PL.publish('/user/login', 'name='+username);
+        PL.publish_to_online('/user/login', 'name='+username);
     }
    //上线后马上发布我的上线信息
    function onJoinListenAck(event){
