ADD: 修改pushlet的java客户端,使其支持:publish_to_onine协议! BUG: XMLAdapter.public void push(Event anEvent) throws IOException {方法里       if (out.checkError()) {  //@wjw_add 把out.flush();改成 out.checkError(),才能判断客户端是否断掉

--- a/web-app/IM.html
+++ b/web-app/IM.html
@@ -27,6 +27,10 @@
     //在线用户  里面装的就是树节点（的引用）
     onlines = new Array();
     
+		function onAbort(event) {
+			onError(event);
+		}
+		
 		function onError(event) {  //@wjw_add 防止网络断线等问题引起的非正常断开
       PL.state = PL.STATE_READY;
       joinListen();
