--- a/web-app/ajax-2.html
+++ b/web-app/ajax-2.html
@@ -13,6 +13,8 @@
 
 	<link href="style.css" rel="stylesheet">
 
+  <!-- See www.jeremie.com, still the most lightweight XML parser... -->
+  <script type="text/javascript" src="js/xparse.js"></script>
 	<script type="text/javascript" src="js/ajax-pushlet-client.js"></script>
 
 	<script type="text/javascript"><!--
