--- a/web-app/ajax.html
+++ b/web-app/ajax.html
@@ -12,6 +12,8 @@
 		<title>Ajax Demo</title>
 
 		
+    <!-- See www.jeremie.com, still the most lightweight XML parser... -->
+    <script type="text/javascript" src="js/xparse.js"></script>
 		<script type="text/javascript" src="js/ajax-pushlet-client.js"></script>
 		
 		<script type="text/javascript"><!--
