@wjw_add: 修改ajax-pushlet-client.js文件,添加publishJson(),以及publishJson_to_online()2个函数,方便用户已JSON对象的方式发布消息.

--- a/web-app/ajax-3.html
+++ b/web-app/ajax-3.html
@@ -28,11 +28,12 @@
 
 	function joinListen() {
 		PL.state = PL.STATE_READY;
-	  p_join_listen('/pushlet/chatx');
+	  PL.joinListen('/pushlet/chatx');
 	}
 
 	function publish() {
-		p_publish('/pushlet/chatx','msg','sssdd王俊伟');
+		//p_publish('/pushlet/chatx','msg','sssdd王俊伟');
+		PL.publishJson('/pushlet/chatx',{'msg': 'sssdd王俊伟'});
 	}
 
 	function leave() {
