--- a/web-app/IM.html
+++ b/web-app/IM.html
@@ -35,7 +35,7 @@
           var smessage = Ext.get('cw_iw_' + node.id).dom.value;
           //替换回车符
           //smessage=smessage.replace(/\n/ig,"\r");
-          PL.publish('/user/chat', 'p_to=' + encodeURIComponent(node.id) + '&message=' + encodeURIComponent(smessage));
+          PL.publishJson('/user/chat', {'p_to': node.id, 'message': smessage});
           //得到当前时间
           var now = new Date()
           var time = " " + now.getHours() +
@@ -148,7 +148,7 @@
       
       //发布上线信息
       function publish(){
-          PL.publish_to_online('/user/login', 'name=' + encodeURIComponent(username));
+          PL.publishJson_to_online('/user/login', {'name': username});
       }
       
       //上线后马上发布我的上线信息
