@wjw_change: 简化Js中PL.pushletURL的设置

--- a/web-app/IM-json.html
+++ b/web-app/IM-json.html
@@ -60,7 +60,7 @@
           var t = new Ext.ToolTip({
               target: 'mainUI',
               dismissDelay: 30000,
-              html: PL.statusMsg
+              html: event.toString()
           });
           t.showAt([50, 80]);
       }
