--- a/web-app/IM.html
+++ b/web-app/IM.html
@@ -63,7 +63,7 @@
           var t = new Ext.ToolTip({
               target: 'mainUI',
               dismissDelay: 30000,
-              html: PL.statusMsg
+              html: event.toString()
           });
           t.showAt([50, 80]);
       }
